@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2020 Oracle and/or its affiliates. All rights reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,14 +18,17 @@ package io.helidon.webserver.jersey;
 
 import java.io.InputStream;
 import java.lang.reflect.Type;
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
 import java.security.Principal;
 import java.util.Collection;
 import java.util.Map;
+import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.logging.Logger;
 
 import javax.ws.rs.core.Application;
@@ -34,7 +37,15 @@ import javax.ws.rs.core.Configuration;
 import javax.ws.rs.core.GenericType;
 import javax.ws.rs.core.SecurityContext;
 
+import io.helidon.common.configurable.ServerThreadPoolSupplier;
+import io.helidon.common.configurable.ThreadPool;
+import io.helidon.common.context.Context;
+import io.helidon.common.context.Contexts;
+import io.helidon.common.http.Http;
+import io.helidon.common.http.HttpRequest;
+import io.helidon.config.Config;
 import io.helidon.webserver.Handler;
+import io.helidon.webserver.HttpException;
 import io.helidon.webserver.Routing;
 import io.helidon.webserver.ServerRequest;
 import io.helidon.webserver.ServerResponse;
@@ -42,12 +53,15 @@ import io.helidon.webserver.Service;
 
 import io.opentracing.Span;
 import io.opentracing.SpanContext;
+import org.eclipse.microprofile.config.ConfigProvider;
 import org.glassfish.jersey.internal.PropertiesDelegate;
 import org.glassfish.jersey.internal.util.collection.Ref;
 import org.glassfish.jersey.server.ApplicationHandler;
 import org.glassfish.jersey.server.ContainerRequest;
 import org.glassfish.jersey.server.ResourceConfig;
 import org.glassfish.jersey.server.model.Resource;
+
+import static java.util.Objects.requireNonNull;
 
 /**
  * The Jersey Support integrates Jersey (JAX-RS RI) into the Web Server.
@@ -92,10 +106,11 @@ public class JerseySupport implements Service {
 
     private static final Logger LOGGER = Logger.getLogger(JerseySupport.class.getName());
 
-    private final Type requestType = (new GenericType<Ref<ServerRequest>>() { }).getType();
-    private final Type responseType = (new GenericType<Ref<ServerResponse>>() { }).getType();
-    private final Type spanType = (new GenericType<Ref<Span>>() { }).getType();
-    private final Type spanContextType = (new GenericType<Ref<SpanContext>>() { }).getType();
+    private static final Type REQUEST_TYPE = (new GenericType<Ref<ServerRequest>>() { }).getType();
+    private static final Type RESPONSE_TYPE = (new GenericType<Ref<ServerResponse>>() { }).getType();
+    private static final Type SPAN_TYPE = (new GenericType<Ref<Span>>() { }).getType();
+    private static final Type SPAN_CONTEXT_TYPE = (new GenericType<Ref<SpanContext>>() { }).getType();
+    private static final AtomicReference<ExecutorService> DEFAULT_THREAD_POOL = new AtomicReference<>();
 
     private final ApplicationHandler appHandler;
     private final ExecutorService service;
@@ -105,13 +120,14 @@ public class JerseySupport implements Service {
      * Creates a Jersey Support based on the provided JAX-RS application.
      *
      * @param application the JAX-RS application to build the Jersey Support from
-     * @param service     the executor service that is used for a request handling. If {@code null},
-     *                    a thread pool of size
-     *                    {@link Runtime#availableProcessors()} {@code * 2} is used.
+     * @param service the executor service that is used for a request handling. If {@code null},
+     * a thread pool of size
+     * {@link Runtime#availableProcessors()} {@code * 8} is used.
      */
     private JerseySupport(Application application, ExecutorService service) {
-        this.appHandler = new ApplicationHandler(application, new WebServerBinder());
-        this.service = service != null ? service : Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors() * 2);
+        ExecutorService executorService = (service != null) ? service : getDefaultThreadPool();
+        this.service = Contexts.wrap(executorService);
+        this.appHandler = new ApplicationHandler(application, new ServerBinder(executorService));
     }
 
     @Override
@@ -119,10 +135,25 @@ public class JerseySupport implements Service {
         routingRules.any(handler);
     }
 
+    private static ExecutorService getDefaultThreadPool() {
+        if (DEFAULT_THREAD_POOL.get() == null) {
+            Config executorConfig = ((Config) ConfigProvider.getConfig())
+                    .get("server.executor-service");
+
+            DEFAULT_THREAD_POOL.set(ServerThreadPoolSupplier.builder()
+                                            .name("server")
+                                            .config(executorConfig)
+                                            .build()
+                                            .get());
+        }
+        return DEFAULT_THREAD_POOL.get();
+    }
+
     private static URI requestUri(ServerRequest req) {
         try {
-            URI partialUri = new URI(req.isSecure() ? "https" : "http", null, req.localAddress(),
-                                     req.localPort(), req.path().absolute().toString(), null, null);
+            // Use raw string representation and URL to avoid re-encoding chars like '%'
+            URI partialUri = new URL(req.isSecure() ? "https" : "http", req.localAddress(),
+                                     req.localPort(), req.path().absolute().toRawString()).toURI();
             StringBuilder sb = new StringBuilder(partialUri.toString());
             if (req.uri().toString().endsWith("/") && sb.charAt(sb.length() - 1) != '/') {
                 sb.append('/');
@@ -131,31 +162,31 @@ public class JerseySupport implements Service {
             // unfortunately, the URI constructor encodes the 'query' and 'fragment' which is totally silly
             if (req.query() != null && !req.query().isEmpty()) {
                 sb.append("?")
-                  .append(req.query());
+                        .append(req.query());
             }
             if (req.fragment() != null && !req.fragment().isEmpty()) {
                 sb.append("#")
-                  .append(req.fragment());
+                        .append(req.fragment());
             }
             return new URI(sb.toString());
-        } catch (URISyntaxException e) {
-            throw new IllegalStateException("Unable to create a request URI from the request info.", e);
+        } catch (URISyntaxException | MalformedURLException e) {
+            throw new HttpException("Unable to parse request URL", Http.Status.BAD_REQUEST_400, e);
         }
     }
 
     private static URI baseUri(ServerRequest req) {
         try {
             return new URI(req.isSecure() ? "https" : "http", null, req.localAddress(),
-                           req.localPort(), basePath(req), null, null);
+                           req.localPort(), basePath(req.path()), null, null);
         } catch (URISyntaxException e) {
-            throw new IllegalStateException("Unable to create a base URI from the request info.", e);
+            throw new HttpException("Unable to parse request URL", Http.Status.BAD_REQUEST_400, e);
         }
     }
 
-    private static String basePath(ServerRequest req) {
-        String reqPath = req.path().toString();
-        String absPath = req.path().absolute().toString();
-        String basePath = absPath.substring(0, absPath.length() - reqPath.length());
+    static String basePath(HttpRequest.Path path) {
+        String reqPath = path.toString();
+        String absPath = path.absolute().toString();
+        String basePath = absPath.substring(0, absPath.length() - reqPath.length() + 1);
 
         if (absPath.isEmpty() || basePath.isEmpty()) {
             return "/";
@@ -163,6 +194,30 @@ public class JerseySupport implements Service {
             return basePath + "/";
         } else {
             return basePath;
+        }
+    }
+
+    /**
+     * A WebServerBinder that also supports injection of ThreadPool by name if the executor is one.
+     * This class is explicitly static to avoid field assignment order issues in the outer class.
+     */
+    private static class ServerBinder extends WebServerBinder {
+        private final ExecutorService executorService;
+
+        ServerBinder(ExecutorService executorService) {
+            this.executorService = requireNonNull(executorService);
+        }
+
+        @Override
+        protected void configure() {
+            super.configure();
+
+            // If the executor is a ThreadPool, make it available to inject with its name.
+            Optional<ThreadPool> maybePool = ThreadPool.asThreadPool(executorService);
+            if (maybePool.isPresent()) {
+                ThreadPool pool = maybePool.get();
+                bind(pool).named(pool.getName()).to(ThreadPool.class);
+            }
         }
     }
 
@@ -176,6 +231,15 @@ public class JerseySupport implements Service {
 
         @Override
         public void accept(ServerRequest req, ServerResponse res) {
+            // create a new context for jersey, so we do not modify webserver's internals
+            Context parent = Contexts.context()
+                    .orElseThrow(() -> new IllegalStateException("Context must be propagated from server"));
+            Context jerseyContext = Context.create(parent);
+
+            Contexts.runInContext(jerseyContext, () -> doAccept(req, res));
+        }
+
+        private void doAccept(ServerRequest req, ServerResponse res) {
             CompletableFuture<Void> whenHandleFinishes = new CompletableFuture<>();
             ResponseWriter responseWriter = new ResponseWriter(res, req, whenHandleFinishes);
             ContainerRequest requestContext = new ContainerRequest(baseUri(req),
@@ -189,36 +253,37 @@ public class JerseySupport implements Service {
             requestContext.setWriter(responseWriter);
 
             req.content()
-               .as(InputStream.class)
-               .thenAccept(is -> {
-                   requestContext.setEntityStream(is);
+                    .as(InputStream.class)
+                    .thenAccept(is -> {
+                        requestContext.setEntityStream(is);
 
-                   service.submit(() -> {
-                       try {
-                           LOGGER.finer("Handling in Jersey started.");
+                        service.execute(() -> { // No need to use submit() since the future is not used.
+                            try {
+                                LOGGER.finer("Handling in Jersey started.");
 
-                           requestContext.setRequestScopedInitializer(injectionManager -> {
-                               injectionManager.<Ref<ServerRequest>>getInstance(requestType).set(req);
-                               injectionManager.<Ref<ServerResponse>>getInstance(responseType).set(res);
-                               injectionManager.<Ref<Span>>getInstance(spanType).set(req.span());
-                               injectionManager.<Ref<SpanContext>>getInstance(spanContextType).set(req.spanContext());
-                           });
+                                requestContext.setRequestScopedInitializer(injectionManager -> {
+                                    injectionManager.<Ref<ServerRequest>>getInstance(REQUEST_TYPE).set(req);
+                                    injectionManager.<Ref<ServerResponse>>getInstance(RESPONSE_TYPE).set(res);
+                                    injectionManager.<Ref<Span>>getInstance(SPAN_TYPE).set(req.span());
+                                    injectionManager.<Ref<SpanContext>>getInstance(SPAN_CONTEXT_TYPE).set(req.spanContext());
+                                });
 
-                           appHandler.handle(requestContext);
-                           whenHandleFinishes.complete(null);
-                       } catch (Throwable e) {
-                           // this is very unlikely to happen; Jersey will try to call ResponseWriter.failure(Throwable) rather
-                           // than to propagate the exception
-                           req.next(e);
-                       }
-                   });
+                                appHandler.handle(requestContext);
+                                whenHandleFinishes.complete(null);
+                            } catch (Throwable e) {
+                                // this is very unlikely to happen; Jersey will try to call ResponseWriter.failure(Throwable)
+                                // rather
+                                // than to propagate the exception
+                                req.next(e);
+                            }
+                        });
 
-               })
-               .exceptionally(throwable -> {
-                   // this should not happen; but for the sake of completeness ..
-                   req.next(throwable);
-                   return null;
-               });
+                    })
+                    .exceptionally(throwable -> {
+                        // this should not happen; but for the sake of completeness ..
+                        req.next(throwable);
+                        return null;
+                    });
         }
     }
 
@@ -259,7 +324,9 @@ public class JerseySupport implements Service {
         }
     }
 
-    /** Just a stub implementation that should be evolved in the future. */
+    /**
+     * Just a stub implementation that should be evolved in the future.
+     */
     private static class WebServerSecurityContext implements SecurityContext {
 
         @Override
@@ -349,7 +416,7 @@ public class JerseySupport implements Service {
     /**
      * Builder for convenient way to create {@link JerseySupport}.
      */
-    public static class Builder implements Configurable<Builder>, io.helidon.common.Builder {
+    public static final class Builder implements Configurable<Builder>, io.helidon.common.Builder<JerseySupport> {
 
         private ResourceConfig resourceConfig;
         private ExecutorService executorService;
@@ -370,6 +437,7 @@ public class JerseySupport implements Service {
          *
          * @return built module
          */
+        @Override
         public JerseySupport build() {
             return new JerseySupport(resourceConfig, executorService);
         }
@@ -449,7 +517,7 @@ public class JerseySupport implements Service {
          * where the {@link JerseySupport} is registered.
          *
          * @param executorService the executor service to use for a handling of requests that go
-         *                        to the Jersey application
+         * to the Jersey application
          * @return an updated instance
          */
         public Builder executorService(ExecutorService executorService) {
